# Atom-Auth-at-Edge-App

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  template.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yaml  cicd.yaml  label.yaml  release.yaml  sync_labels.yaml
docs/src/: contributing.md  release_notes.md
lambdas/auth/: main.py
sdk/: __init__.py
